--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ readme = "README.md"
 python = "^3.12"
 pandas = "^2.2.2"
 pydantic = "^2.9.1"
+matplotlib = "^3.9.2"
+seaborn = "^0.13.2"
+plotly = "^5.24.0"
 
 
 [build-system]
